<resources>
    <string name="app_name">My Notes</string>

    <!-- Options menu buttons -->
    <string name="action_save">Save</string>
    <string name="action_lock">Lock</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_reminder">Reminder</string>
    <string name="action_remove_reminder">Remove reminder</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>

    <!-- Main activity -->
    <string name="title_my_notes">My notes</string>

    <!-- Add note activity -->
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="title_activity_add_note">Add note</string>
    <string name="title_activity_modify_note">Edit note</string>
    <string name="msg_note_updated">Your note was updated successfully.</string>
    <string name="msg_note_added">Your note was added successfully.</string>
    <string name="msg_note_deleted">Your note was deleted.</string>
    <string name="msg_please_fill_fields">Please fill title and description</string>
    <string name="msg_create_your_first_note">Create your first note</string>
    <string name="msg_delete_note">Are you sure you want to delete this note?</string>
    <string name="msg_note_is_locked">Your note is locked</string>
    <string name="msg_reminder_set">Reminder set for</string>
    <string name="msg_reminder_removed">Reminder was removed successfully.</string>

    <!-- Buttons -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete_note">Delete note</string>
    <string name="title_authentication">Authentication</string>
    <string name="msg_authenticate_first">To open your note, you need to authenticate yourself first.</string>
    <string name="dialog_title_remove_reminder">Remove reminder</string>
    <string name="dialog_desc_remove_reminder">Are you sure you want remove reminder for %1$s</string>

    <!-- OnBoarding screens -->
    <string name="onboarding_hello_title">Save your note</string>
    <string name="onboarding_hello_description">Save your thoughts easy and fast on your device.</string>

    <string name="onboarding_security_title">Protect your note</string>
    <string name="onboarding_security_description">Protect your note easily, using fingerprint, pin or another authentication method.</string>

    <string name="onboarding_reminder_title">Set Reminder</string>
    <string name="onboarding_reminder_description">Set reminder for your notes easily and receive a notification for it.</string>

    <string name="onboarding_share_title" translatable="false">Sharing</string>
    <string name="onboarding_share_description" translatable="false">Share your notes easy with your family and friends.</string>
    <string name="btn_finish">finish</string>

    <!-- Notifications -->
    <string name="notification_channel_name">My notes</string>
</resources>